# traversability-estimation

./: .gitignore  README.md  pyproject.toml
config/: AllMissions.json  dataset.yaml  imagery.yaml  metrics.yaml  missions.json  missions_to_run.json  paths.yaml  pipeline.yaml  rigiblick_missions.json  rosbags.yaml  swissimg.yaml  sync.yaml  topics.yaml
debug/: bag_topics.txt  filter_cost_of_transport_sweep.py  find_downward_topics.py  plot_cot_correlations.py  plot_cot_vs_cot_p95.py  plot_flat_cot_distributions.py  plot_patch_cot_distributions.py  plot_patch_oriented_slope_vs_cot.py  plot_patch_slope_vs_cot.py  plot_patch_spreads.py  visualize_patch_dataset.py
debug/patch_compare_dem_robot/: plot_pitch_slope_histograms.py  plot_pitch_vs_oriented_slope.py  plot_pitch_vs_slope.py
debug/patch_dem_analysis/: plot_patch_cot_distributions.py  plot_patch_oriented_slope_vs_cot.py  plot_patch_slope_vs_cot.py  plot_patch_spreads.py  visualize_patch_dataset.py
debug/patch_robot_analysis/: list_top_cot_patches.py  plot_patch_pitch_vs_cot.py  plot_patch_pitch_vs_cot_mission.py  plot_patch_pitch_vs_cot_speed.py
src/: add_dem_longlat_slope.py  build_patch_dataset.py  compute_metrics.py  download_bag.py  extract_bag.py  extract_base_orientation.py  get_swissimg_patch.py  get_swisstopo_patch.py  infer_cluster_map.py  metrics.py  run_all_missions.py  run_pipeline.py  sync_streams.py
src/tools/: export_missions.py  merge_h5_datasets.py
src/utils/: __init__.py  cli.py  filtering.py  missions.py  paths.py  ros_time.py  rosbag_tools.py  synced.py  topics.py
(+15 files in other folders)
