[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "traversability-estimation"
version = "0.0.0"
description = "Scripts and utilities for traversability estimation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "pyyaml",
    "requests",
    "matplotlib",
    "Pillow",
    "rasterio",
    "pyproj",
    "shapely",
    "affine",
    "joblib",
    "torch",
    "transformers",
    "rosbags",
    "opencv-python-headless",
    "h5py",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
